[metadata]
name = Mulmat
version = 0.1
author = Martin Blais
description = blais@furius.ca
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blais/mulmat
project_urls =
    Bug Tracker = https://github.com/blais/mulmat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    mulmat = mulmat
packages = find:
python_requires = >=3.6
install_requires =
    click~=8.0.1
    selenium~=3.141.0

[options.packages.find]
where = mulmat
